# resum-code

./: .env  .gitignore  README.md  pyproject.toml  setup.py
adaptive_importance_sampling/: adaptive_sampling_LF_phi.ipynb  adaptive_sampling_phi.ipynb  adaptive_sampling_theta_phi.ipynb  importance_sampling.ipynb  k-means.ipynb  run_adaptive_sampling.py
baseline_models_comparison/: bayesian-lf-pce.ipynb  bayesian-mf-pce_vpce1.2.ipynb  bayesian-mf-pce_vpce1.4 copy 3.ipynb  bayesian-mf-pce_vpce1.5.ipynb  bayesian-mf-pce_vpce1.6.ipynb  gp_regression-experimental-design.ipynb  gp_regression_surrogate_model.py  mf-co-pce.ipynb  mf-pce.ipynb  mf_gp_vais1.1.ipynb  mf_gp_vmfgp1.1.ipynb  multi-fidelity-experimental-design-ei.ipynb  multi-fidelity-experimental-design_v8.ipynb  multi-fidelity-surrogate-model.ipynb  rare-event-surrogate-model.ipynb  reduced_order.ipynb  resum_vr1.1.ipynb  resum_vr1.2.ipynb  resum_vr1.3.ipynb  tmp.py
bayesian_neural_network/: mf_bnn_vbnn1.1.ipynb  mf_bnn_vbnn1.2 copy.ipynb  mf_bnn_vbnn1.2.ipynb  mf_bnn_vbnn1.3.ipynb
conditional-neural-process/: conditional_neural_process_model.ipynb  conditional_neural_process_testing.ipynb  conditional_neural_process_testing_new_samples.ipynb  conditional_neural_process_training.ipynb  data_generator.py  plotting_utils_cnp.py
examples/: conditional_neural_process_training.ipynb  legend_neutron_example.ipynb  settings.yaml
initial_sampling/: comparing-sampling-methods.ipynb  generate-LF-simulation-samples_constrained_test.ipynb  samples2macro.ipynb
multi-fidelity-gaussian-process/: drawing_utils.py  (+7 more)
(+719 files in other folders)
