[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resum"
version = "1.0.0"
description = "A Python package for a rare event surrogate model (RESuM)"
authors = [
    { name = "Ann-Kathrin Schuetz", email = "annkaschue@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "pyyaml",
    "ipywidgets",
    "pandas",
    "tqdm",
    "dask[dataframe]",
    "imbalanced-learn==0.8.1",
    "termcolor",
    "scipy",
    "GPy",
    "emukit",
    "backports.tarfile",
    "pymc"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
packages = ["resum"]

[project.urls]
Homepage = "https://github.com/yourusername/resum"  # Replace with actual URL
